# watcher

./: .gitignore  AUTHORS  ChangeLog  README.rst  error_finder.sh  requirements.txt  setup.cfg  setup.py
.cache/v/cache/: lastfailed
docs/: make.bat
docs/source/: cloudwatch.rst  conf.py  example.rst  index.rst
example/: sample.py
watcher/: __init__.py  cloudwatch_publisher.py  unity.py
watcher/cloudwatch/: cloudwatch_publisher.py
watcher/cloudwatch/tests/: test_cloudwatch_publisher.py
watcher/logging/: easy_logging.py
