[metadata]
name = watcher
author = JiLu
author-email = magi-go@126.com
summary = application logging and monitor module
description-file = README.rst
home-page = mrobot.me
license = MIT
classifier =
    Development Status :: 4 - Beta
        Environment :: Module
        Environment :: DMP
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: MIT Software License
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    watcher
    logging
    monitor
    heartbeat


